<resources>
    <string name="app_name">MicrosoftMSRIT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="please_wait">Please wait…</string>
    <string name="title_activity_manage_communties">Manage communities</string>
    <string name="title_activity_create_community">Create community</string>
    <string name="title_activity_create_post">Create post</string>
    <string name="title_activity_create_event">Create event</string>

    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="new_community">New community</string>
    <string name="create">Create</string>
    <string name="search_all_communities">Search all communities</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="email_address">Email address</string>
    <string name="view_details">View Details</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="event_details">Event Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="retype_password">Retype password</string>
    <string name="request_rsvp">Request RSVP?</string>
    <string name="description">Description</string>
    <string name="create_password">Create password</string>
    <string name="contact_phone_or_email">Contact phone/email</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_activity_image_showcase">ImageShowcaseActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="community_name">Community name</string>
    <string name="choose_an_id">Choose an ID</string>
    <string name="private_community">Private community?</string>
    <string name="event_name">Event name</string>
    <string name="sync">Sync</string>
    <string name="create_community">Create Community</string>
    <string name="subscribe">Subscribe</string>
    <string name="attach">Attach</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_communities">My Communities</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="delete_community">Delete community</string>
    <string name="subscription_requests">Subscription requests</string>
    <string name="search_for_communities">Search for communities</string>
    <string name="submit">Submit</string>
    <string name="request_membership">Request membership</string>
    <string name="this_is_a_private_community">This is a private community.</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="new_event">New event</string>
    <string name="account">Account</string>
    <string name="write_something">Write something...</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_splash_screen">Campus Connect</string>
</resources>

