<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_subscribe"
        android:icon="@drawable/pin"
        android:orderInCategory="100"
        android:title="@string/subscribe"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_unsubscribe"
        android:icon="@drawable/unpin"
        android:orderInCategory="100"
        android:title="@string/unsubscribe"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_new_community"
        android:orderInCategory="100"
        android:title="@string/create_community"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_manage_communities"
        android:orderInCategory="200"
        android:title="@string/my_communities"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="500"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
