<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fff"
              android:orientation="vertical"
              tools:context="com.msamogh.firstapp.admin.CreateCommunityActivity">

    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="3dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
<!--
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">


             <com.msamogh.firstapp.view.RobotoTextView
                 android:id="@+id/textViewNewEvent"
                 style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"
                 android:gravity="center_vertical"
                 android:text="@string/new_community"
                 android:textColor="#fff"/>


             <com.msamogh.firstapp.view.RobotoBoldTextView
                 android:id="@+id/post"
                 style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:clickable="true"
                 android:gravity="center_vertical|right"
                 android:padding="15dp"
                 android:text="@string/create"
                 android:textAllCaps="true"
                 android:textColor="#fff"
                 android:textSize="15dp"
                 android:textStyle="bold"/>
         </LinearLayout>-->
     </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/c_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#fff"
                android:hint="@string/community_name"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="#333"
                android:textColorHint="#777"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5"/>

            <EditText
                android:id="@+id/c_id"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#fff"
                android:hint="@string/choose_an_id"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="#333"
                android:textColorHint="#777"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:padding="15dp"
                    android:text="@string/private_community"

                    android:textSize="18sp"

                    />

                <Switch
                    android:id="@+id/c_private"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:checked="false"
                    android:padding="15dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e5e5e5"/>

            <EditText
                android:id="@+id/c_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:isScrollContainer="false"
                android:padding="15dp"
                android:textColor="#333"
                android:textColorHint="#777"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>